force-app/main/default/objects/South_Africa_ID_Number__c/South_Africa_ID_Number__c.object-meta.xml
<CustomObject>
    <description>Object to store South African ID numbers</description>
    <label>South African ID Number</label>
    <nameField>
        <label>South Africa IDs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>South African ID Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>