force-app/main/default/objects/South_Africa_ID_Number__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Store DOB value retrieved from SA Id number</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>