force-app/main/default/objects/South_Africa_ID_Number__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <description>Store SA ID value entered by the user</description>
    <externalId>true</externalId>
    <label>ID Number</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>