force-app/main/default/objects/South_Africa_ID_Number__c/fields/Last_Searched__c.field-meta.xml
<CustomField>
    <fullName>Last_Searched__c</fullName>
    <description>Store the visitor last search in datetime format</description>
    <label>Last Searched</label>
    <type>DateTime</type>
</CustomField>