force-app/main/default/objects/South_Africa_ID_Number__c/fields/SA_Citizen_status__c.field-meta.xml
<CustomField>
    <fullName>SA_Citizen_status__c</fullName>
    <description>Store the SA Citizen value from SA Id number</description>
    <label>SA Citizen status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SA Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>