force-app/main/default/objects/South_Africa_ID_Number__c/fields/Search_Count__c.field-meta.xml
<CustomField>
    <fullName>Search_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <description>A counter on the record that the number of time a visitor searches same SA ID number</description>
    <label>Search Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>